# waliki-service

./: .env.sample  .gitignore  Cargo.toml  diesel.toml  rust-toolchain.toml
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
migrations/2025-07-04-023203_create_user/: down.sql  up.sql
src/: core.rs  main.rs  procurement.rs
src/adapters/http/actix/: error_mapper.rs  mod.rs  routes.rs  state.rs
src/adapters/http/actix/controllers/: user.rs
src/adapters/http/actix/dto/: auth.rs  mod.rs
src/adapters/http/actix/guards/: access_token.rs  mod.rs  refresh_token.rs
src/adapters/http/actix/user/: mapper.rs  mod.rs
src/context/: mod.rs
src/context/sales/domain/: mod.rs  sales.rs
src/context/sales/domain/entities/: mod.rs  sale_item.rs
src/context/sales/domain/errors/: value_objects.rs
src/context/sales/domain/value_objects/: currency.rs  date_sale.rs  line_total.rs  mod.rs  money.rs  payment_method.rs  product_id.rs  quantity.rs  sale_id.rs  sale_item_id.rs  seller_id.rs  store_id.rs  unit_price.rs
src/context/shared/domain/value_objects/: mod.rs  status.rs  uuid.rs
src/context/shared/errors/: code.rs
src/context/shared_kernel/: mod.rs
src/context/shared_kernel/application/ports/: mod.rs  token_issuer.rs  token_verifier.rs
src/context/shared_kernel/application/services/: mod.rs  session_tokens.rs
src/context/shared_kernel/domain/value_objects/: date.rs  (+1 more)
src/context/shared_kernel/errors/: code.rs  domain_error.rs  mod.rs
src/context/user/: mod.rs
src/context/user/app/: mod.rs
src/context/user/application/: errors.rs
src/context/user/domain/: errors.rs  mod.rs
src/context/user/infrastructure/: mod.rs
src/core/: domain.rs
src/core/common/: constants.rs
src/core/domain/: tienda.rs
src/core/domain/tienda/: entities.rs  repository.rs  value_object.rs
src/core/shared/: domain.rs
src/core/shared/domain/: agregate_root.rs  domain_events.rs
src/legacy/: shared.rs
src/legacy/common/constants/: database_status.rs  model_status.rs
src/legacy/domain/tienda/: entities.rs
src/legacy/shared/: domain.rs
src/platform/: logger.rs  mod.rs
src/platform/config/: api.rs  common.rs  helpers.rs  mod.rs
src/platform/utils/: hidden_sensible_data.rs  hide_sensible_data.rs  mod.rs
src/procurement/: domain.rs  value_object.rs
src/procurement/domain/: purchase_order.rs  purchase_order_test.rs  repository.rs  value_object.rs
src/procurement/domain/entity/: purchase_order.rs  purchase_order_test.rs
src/procurement/domain/value_object/: purchase_order_line.rs
src/procurement/value_object/: product_uuid.rs  purchase_order_line.rs  purchase_order_uuid.rs  supplier_uuid.rs
(+88 files in other folders)
