[package]
name = "waliki-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = {version= "0.11.0", features = ["cookie-session"]}
openidconnect = { version = "3.4.0", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
actix-web = "4.9.0"
chrono = "0.4.40"
diesel = "2.2.8"
dotenv = "0.15.0"
regex = "1.11.1"
serde = "1.0.218"
base64 = "0.22.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"] }
