[package]
name = "waliki-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = {version= "0.11.0", features = ["cookie-session"]}
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest","rustls-tls"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls","blocking"] }
actix-web = "4.11.0"
chrono = "0.4.42"
diesel = "2.3.2"
dotenv = "0.15.0"
regex = "1.11.2"
serde = "1.0.226"
base64 = "0.22.1"
serde_json = "1.0.145"
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.28"
env_logger = "0.11.8"
async-trait = "0.1.89"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"] }
