[package]
name = "waliki-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.11.0", features = ["cookie-session"] }
openidconnect = { version = "4.0.1", default-features = false, features = [
  "reqwest-blocking",
  "rustls-tls",
] }
reqwest = { version = "0.12.23", default-features = false, features = [
  "rustls-tls",
  "blocking",
] }
actix-web = "4.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.2.12", features = [
  "postgres",
  "r2d2",
  "uuid",
  "chrono",
] }
dotenv = "0.15.0"
regex = "1.11.2"
serde = "1.0.226"
base64 = "0.22.1"
serde_json = "1.0.145"
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
log = "0.4.28"
once_cell = "1.21.3"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "json",
  "time",
] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7.19"

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = [
  "precommit-hook",
  "run-cargo-test",
  "run-cargo-clippy",
] }
